--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.2.71'
     ext.okhttpVersion = '3.11.0'
     ext.retrofitVersion = '2.4.0'
+    ext.anko_version='0.10.7'
     repositories {
         google()
         jcenter()
