--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.71'
+    ext.support_version = '28.0.0'
     ext.okhttpVersion = '3.11.0'
     ext.retrofitVersion = '2.4.0'
     ext.anko_version='0.10.7'
